# cn_chess_tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: snapshot-tests.yml
docs/: SNAPSHOT_TESTING.md
docs/plans/: 2026-01-21-chinese-chess-tui.md  2026-01-23-replace-reinvented-wheels-summary.md
examples/: build_check_fen.rs  gen_check_fen.rs  test_check_fen.rs  test_initial.rs  working_fen.rs
src/: board.rs  config.rs  fen.rs  fen_io.rs  fen_print.rs  game.rs  lib.rs  main.rs  notation.rs  pgn.rs  types.rs  ui.rs  xml.rs
src/notation/: chinese.rs  iccs.rs  iccs_parse.rs  mod.rs  wxf.rs
src/ucci/: client.rs  engine.rs  mod.rs  parser.rs  protocol.rs  serializer.rs  state.rs
tests/: ai_integration_test.rs  basic_rules.rs  fen_format.rs  game_controller_test.rs  game_iccs_integration.rs  game_pgn_integration.rs  notation_chinese.rs  notation_chinese_ambiguity.rs  notation_iccs.rs  notation_wxf.rs  pgn_parsing.rs  test_simple_fen.rs  ucci_integration.rs  ui_responsive.rs  ui_snapshots.rs  xml_conversion.rs
tests/snapshots/: README.md  ui_snapshots__after_first_move.snap  ui_snapshots__check_state.snap  ui_snapshots__checkmate_state.snap  ui_snapshots__compact_layout.snap  ui_snapshots__full_layout.snap  ui_snapshots__initial_position_large_terminal.snap  ui_snapshots__initial_position_small_terminal.snap  ui_snapshots__initial_position_ui.snap  ui_snapshots__standard_layout.snap
tests/ucci/: client_test.rs  mod.rs  parser_test.rs  protocol_test.rs  serializer_test.rs  state_test.rs
