[package]
name = "cn_chess_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.0", features = ["derive"], optional = true }
rustyline = { version = "14.0", optional = true }

[dev-dependencies]
insta = "1.46.1"
tempfile = "3.14"

[features]
default = []
ucci-cli = ["clap", "rustyline"]
