[package]
name = "cn_chess_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.0", features = ["derive"], optional = true }
rustyline = { version = "14.0", optional = true }
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
insta = "1.46.1"
tempfile = "3.14"

[features]
default = []
ucci-cli = ["clap", "rustyline"]

[[bin]]
name = "ucci_client"
required-features = ["ucci-cli"]
